# avion

./: .gitignore  .pylintrc  all_checks.py  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements.dev.txt
avion-api/api/: pyproject.toml  setup.py
avion-api/api/avion/api/: app.py  flask_container.py  http_exception.py
avion-api/api/avion/api/controller/: airline_controller.py  airline_name_controller.py  company_controller.py  company_name_controller.py  fleet_controller.py  jwt_test_controller.py  login_controller.py  profile_controller.py  profiles_controller.py  status_controller.py  user_account_controller.py
avion-api/api/avion/api/decorator/: with_profile.py
avion-api/api/avion/api/schema/: airline_schema.py  jwt_access_token_schema.py  profile_schema.py  status_schema.py  user_account_schema.py
avion-api/api/src/avion/api/: app.py
avion-api/api/tests/flowtesting/: test_registration.py
avion-api/domain/: pyproject.toml  setup.py
avion-api/domain/avion/config/: config.py  jwt_config.py
avion-api/domain/avion/di/: container.py  provider.py
avion-api/domain/avion/model/: airline.py  currency.py  profile.py  user_account.py
avion-api/domain/avion/parameters/: create_airline_params.py  create_company_params.py  create_profile_params.py  create_user_account_params.py
avion-api/domain/avion/repository/: airline_repository.py  company_repository.py  profile_repository.py  user_account_repository.py
avion-api/domain/avion/repository/exceptions/: airline_not_found_exception.py
avion-api/domain/avion/service/account/: user_account_service.py
avion-api/domain/avion/service/company/: company_service.py
avion-api/domain/avion/testutils/: db_initializer.py  flask_client.py  flask_test_client.py
avion-api/domain/tests/: db_initializer.py
avion-wsgi/: pyproject.toml
avion-wsgi/src/wsgi/: route_template.py  wsgiapp.py
avion-wsgi/src/wsgi/di/: container.py
(+238 files in other folders)
