[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsgi"
version = "0.0.1"
authors = [
  { name="Diddi Oskarsson", email="diddi@diddi.se" },
]
description = "A small example package"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
test = ["pytest", "mockito"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
