[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "avion-api"
version = "0.0.1"
authors = [{ name="Diddi Oskarsson", email="diddi@diddi.se" }]
description = "Avion Virtual Airline Manager API"
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.0.3, <=2.1.3",
    "flask-restx",
    "werkzeug >=2.1, <2.2",
    "marshmallow",
    "Flask-CORS",
    "avion-domain"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
test = [
    "pytest",
    "mockito",
    "pylint>=2.15.4",
]
