[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "avion-domain"
version = "0.0.1"
authors = [{ name="Diddi Oskarsson", email="diddi@diddi.se" }]
description = "Avion Virtual Airline Manager Domain"
requires-python = ">=3.8"
dependencies = [
    "flask-jwt-extended"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
test = [
    "pytest",
    "mockito",
    "pylint>=2.15.4",
    "parameterized"
]
